--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "@ionic/storage": "^4.0.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
     "rxjs": "~7.8.0",
